Adicionando routes e export services e categories

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        <%= title %>
+        Provider
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
