--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,8 @@
   <!-- SIDEBAR -->
   <%- include("./partials/sidebar.ejs") -%>
   <h1 class="text-4xl font-bold mb-3">
-    <%= title %>
+    Provider
   </h1>
-  <p>Welcome to <%= title %></p>
 </body>
 
 </html>
