--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,12 @@
 </head>
 
 <body>
-    <header class="w-full bg-black">
+    <header class="w-full bg-black flex justify-between">
+        <h1 class="text-2xl font-bold text-white mb-3">
+            Provider
+        </h1>
 
+        <h1 class="text-2xl font-bold text-white mb-3">
+            Provider
+        </h1>
     </header>
