--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,8 @@
 <aside class="h-svh w-72 bg-color-gray-light p-8 gap-2 flex flex-col">
-  <div class="flex items-center px-4 h-12  bg-color-bg">
+  <a
+    href="/services"
+    class="flex items-center rounded-lg px-4 h-12 hover:bg-color-primary bg-color-bg gap-2"
+  >
     <svg
       width="24"
       height="24"
@@ -15,10 +18,13 @@
         stroke-linejoin="round"
       />
     </svg>
-    <p class="text-white text-sm font-semibold">Serviços</p>
-  </div>
+    <p class="text-white text-sm font-medium">Serviços</p>
+  </a>
 
-  <div class="flex items-center px-4 h-12 bg-color-bg">
+  <a
+    href="/services/favorites"
+    class="flex items-center rounded-lg px-4 h-12 hover:bg-color-primary bg-color-bg gap-2"
+  >
     <svg
       width="24"
       height="24"
@@ -36,5 +42,5 @@
     </svg>
 
     <p class="text-white text-sm font-semibold">Favoritos</p>
-  </div>
+  </a>
 </aside>
