--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,215 @@
 <!-- HEADER -->
 <%- include("./partials/header.ejs") -%>
-  <!-- SIDEBAR -->
-  <%- include("./partials/sidebar.ejs") -%>
+  <div class="w-full h-screen flex flex-row">
+    <!-- SIDEBAR -->
+    <%- include("./partials/sidebar.ejs") -%>
+      <div class="flex flex-col px-12 py-8 gap-6">
+        <!-- CATEGORIES -->
+        <ul class="flex flex-row items-center gap-12 overflow-x-auto">
+          <% categories.forEach(function(category) {%>
+            <a href="/<%=category.name.toLowerCase()%>"
+              class="flex flex-col items-center gap-1 justify-center cursor-pointer">
+              <div class="flex items-center justify-center w-18 h-18 rounded-full border-primary">
+                <% if(category.name.toLowerCase()==='cabeleleiro' ){ %>
+                  <!-- Icon Cabeleleiro -->
+                  <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_23_36)">
+                      <path
+                        d="M36.7696 25.4558C35.2075 27.0179 32.6748 27.018 31.1127 25.4558C29.5506 23.8937 29.5506 21.3611 31.1127 19.799C32.6748 18.2369 35.2074 18.2369 36.7696 19.799C38.3317 21.3611 38.3317 23.8938 36.7696 25.4558Z"
+                        stroke="#27272A" stroke-width="1.5" />
+                      <path
+                        d="M25.4558 36.7696C23.8937 38.3317 21.3611 38.3317 19.799 36.7696C18.2368 35.2074 18.2368 32.6748 19.799 31.1127C21.3611 29.5506 23.8937 29.5506 25.4558 31.1127C27.018 32.6748 27.018 35.2074 25.4558 36.7696Z"
+                        stroke="#27272A" stroke-width="1.5" />
+                      <path d="M29.2271 21.6846L7.54246 20.7418" stroke="#27272A" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M21.6849 29.2274L21.6846 21.6846" stroke="#27272A" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M20.7417 7.54257L21.2132 17.442" stroke="#27272A" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_23_36">
+                        <rect width="32" height="32" fill="white" transform="translate(22.6274) rotate(45)" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                  <% } else if(category.name.toLowerCase()==='pedreiro' ){ %>
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M26.6667 29.3333V25.3333C26.6667 22.8192 26.6667 21.5621 25.8856 20.7811C25.1045 20 23.8475 20 21.3333 20H18.6667L16 22.6667L13.3333 20H10.6667C8.15252 20 6.89544 20 6.1144 20.7811C5.33334 21.5621 5.33334 22.8192 5.33334 25.3333V29.3333"
+                        stroke="#27272A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M21.3333 20V29.3333" stroke="#27272A" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M10.6667 20V29.3333" stroke="#27272A" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path
+                        d="M20.6667 12V9.33334C20.6667 6.75601 18.5773 4.66667 16 4.66667C13.4227 4.66667 11.3333 6.75601 11.3333 9.33334V12C11.3333 14.5773 13.4227 16.6667 16 16.6667C18.5773 16.6667 20.6667 14.5773 20.6667 12Z"
+                        stroke="#27272A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M10 10H22" stroke="#27272A" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M16 2.66667V4.66667" stroke="#27272A" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                    <% } else if(category.name.toLowerCase()==='faxineiro' ){ %>
+                      <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M28 4L17.3333 15.3333" stroke="#27272A" stroke-width="1.5" stroke-linecap="round"
+                          stroke-linejoin="round" />
+                        <path
+                          d="M12.5943 14.7805C9.28719 16.0491 6.64359 15.8315 4 14.7847C4.66745 23.3747 8.67219 26.6785 14.0119 28C14.0119 28 18.0348 25.1552 18.6147 18.4099C18.6775 17.6793 18.7089 17.3141 18.5571 16.9025C18.4051 16.4909 18.1069 16.1957 17.5105 15.6053C16.5297 14.6343 16.0393 14.1488 15.4572 14.0272C14.8752 13.9057 14.1149 14.1973 12.5943 14.7805Z"
+                          stroke="#27272A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M6 21.9285C6 21.9285 9.33333 22.5715 12.6667 20" stroke="#27272A" stroke-width="1.5"
+                          stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                          d="M11.3333 9.66667C11.3333 10.5871 10.5871 11.3333 9.66667 11.3333C8.74619 11.3333 8 10.5871 8 9.66667C8 8.74619 8.74619 8 9.66667 8C10.5871 8 11.3333 8.74619 11.3333 9.66667Z"
+                          stroke="#27272A" stroke-width="1.5" />
+                        <path d="M14.6667 5.33333V5.46666" stroke="#27272A" stroke-width="1.5" stroke-linecap="round"
+                          stroke-linejoin="round" />
+                      </svg>
+                      <% } else if(category.name.toLowerCase()==='reparo' ){ %>
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M17.3333 14.6667L24 8" stroke="#27272A" stroke-width="1.5" />
+                          <path d="M25.3334 9.33334L22.6667 6.66667L26 4.66667L27.3334 6.00001L25.3334 9.33334Z"
+                            stroke="#27272A" stroke-width="1.5" stroke-linejoin="round" />
+                          <path
+                            d="M5.36684 11.9665C4.01888 10.6185 3.66793 8.65114 4.31397 6.98064L6.20997 8.87664H8.87664V6.20997L6.98064 4.31397C8.65114 3.66793 10.6185 4.01888 11.9665 5.36684C13.3149 6.71529 13.6657 8.68365 13.0186 10.3546L21.6455 18.9813C23.3164 18.3343 25.2847 18.6851 26.6332 20.0335C27.9811 21.3815 28.3321 23.3488 27.686 25.0193L25.79 23.1233H23.1233V25.79L25.0193 27.686C23.3488 28.3321 21.3815 27.9811 20.0335 26.6332C18.686 25.2857 18.3348 23.3193 18.9799 21.6492L10.3508 13.0201C8.6807 13.6652 6.71428 13.3139 5.36684 11.9665Z"
+                            stroke="#27272A" stroke-width="1.5" stroke-linejoin="round" />
+                          <path
+                            d="M16.2707 19.3333L8.79864 26.8055C8.09488 27.5092 6.95388 27.5092 6.25012 26.8055L5.1945 25.7499C4.49075 25.0461 4.49075 23.9051 5.1945 23.2013L12.6666 15.7292"
+                            stroke="#27272A" stroke-width="1.5" stroke-linejoin="round" />
+                        </svg>
+                        <% } %>
+              </div>
 
-  <!-- ... -->
-</body>
+              <p class="text-sm font-medium text-color-text">
+                <%= category.name %>
+              </p>
+            </a>
+            <% }); %>
+        </ul>
+        <!-- SERVICES -->
+        <div class="flex flex-col gap-5">
+          <h1 class="font-bold text-3xl text-color-bg">Serviços na sua região</h1>
+          <ul class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+            <% services.forEach(function(service) {%>
+              <div class="border-gray-light-2 p-5 rounded-lg w-72 flex flex-col gap-6 justify-center">
+                <section class="flex flex-col gap-0">
+                  <h1 class="text-2xl font-bold text-color-text">
+                    <%= service.name %>
+                  </h1>
+                  <p class="text-base font-bold text-color-primary">
+                    <%= service.category.name %>
+                  </p>
+                  <div class="flex items-center gap-1">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M13.5 13.5C14.4335 13.8183 15 14.2364 15 14.6944C15 15.6916 12.3137 16.5 9 16.5C5.68629 16.5 3 15.6916 3 14.6944C3 14.2364 3.56645 13.8183 4.5 13.5"
+                        stroke="#5E5E65" stroke-linecap="round" />
+                      <path
+                        d="M11.25 7.125C11.25 8.36768 10.2427 9.375 9 9.375C7.75732 9.375 6.75 8.36768 6.75 7.125C6.75 5.88236 7.75732 4.875 9 4.875C10.2427 4.875 11.25 5.88236 11.25 7.125Z"
+                        stroke="#5E5E65" />
+                      <path
+                        d="M9 1.5C12.0441 1.5 14.625 4.07102 14.625 7.19017C14.625 10.359 12.0021 12.5827 9.57938 14.0949C9.40283 14.1965 9.20318 14.25 9 14.25C8.79682 14.25 8.59717 14.1965 8.42062 14.0949C6.00244 12.568 3.375 10.3699 3.375 7.19017C3.375 4.07102 5.9559 1.5 9 1.5Z"
+                        stroke="#5E5E65" />
+                    </svg>
+                    <p class="text-sm font-medium text-color-gray truncate overflow-hidden text-ellipsis">
+                      <%= service.location.city %>, <%= service.location.state %>, <%= service.location.neighborhood %>,
+                            <%= service.location.street %>
+                    </p>
+                  </div>
+                </section>
 
-</html>
+                <section class="flex flex-row items-center justify-between w-full">
+                  <div class="flex items-center gap-1.5">
+                    <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M12.9467 2.79869L14.7701 6.6042C15.0187 7.13394 15.6818 7.64206 16.2413 7.73936L19.5462 8.31235C21.6597 8.67993 22.157 10.28 20.634 11.8584L18.0647 14.5395C17.6295 14.9936 17.3913 15.8693 17.5259 16.4964L18.2616 19.8154C18.8417 22.4425 17.5052 23.4587 15.2778 22.0857L12.18 20.1722C11.6206 19.8262 10.6985 19.8262 10.1287 20.1722L7.03096 22.0857C4.81385 23.4587 3.46702 22.4316 4.0472 19.8154L4.78278 16.4964C4.91746 15.8693 4.67917 14.9936 4.24403 14.5395L1.67469 11.8584C0.162081 10.28 0.649017 8.67993 2.76251 8.31235L6.06745 7.73936C6.61655 7.64206 7.27961 7.13394 7.52825 6.6042L9.35165 2.79869C10.3462 0.73377 11.9624 0.73377 12.9467 2.79869Z"
+                        fill="#FFEA4D" stroke="#FFA920" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                    <p class="text-sm font-bold text-color-bg">
+                      <%= service.stars %>
+                    </p>
+                  </div>
+
+                  <button onclick="window.open('<%= service.contact %>')"
+                    class="hover:bg-color-bg cursor-pointer flex items-center justify-center gap-1.5 bg-color-primary rounded-lg px-3 h-9">
+                    <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M14.9338 11.4706C18.0944 7.46303 17.2406 3.48805 14.9701 2.09531C12.8247 0.779373 10.9523 1.30968 9.82752 2.1544L8.99984 2.77325M14.9338 11.4706C14.1752 12.4325 13.1854 13.3963 11.9284 14.3267C10.6914 15.2422 10.073 15.7 9 15.7C7.92704 15.7 7.30857 15.2422 6.07162 14.3267C-0.422624 9.51991 0.214455 3.82233 3.02995 2.09531C5.17527 0.779373 7.04769 1.30968 8.17248 2.1544L8.99984 2.77325M14.9338 11.4706L10.5137 6.45582C10.3327 6.25055 10.0298 6.20636 9.79776 6.35138L8.04888 7.44447C7.43344 7.82911 6.63467 7.74255 6.11592 7.23495C5.43069 6.56448 5.49983 5.44214 6.26216 4.86084L8.99984 2.77325"
+                        stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+
+                    <p class="text-sm font-semibold text-white">
+                      Contatar
+                    </p>
+                  </button>
+                </section>
+              </div>
+              <% }); %>
+          </ul>
+          <h1 class="font-bold text-3xl text-color-bg">Serviços populares</h1>
+<ul class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+            <% popularServices.forEach(function(service) {%>
+              <div class="border-gray-light-2 p-5 rounded-lg w-72 flex flex-col gap-6 justify-center">
+                <section class="flex flex-col gap-0">
+                  <h1 class="text-2xl font-bold text-color-text">
+                    <%= service.name %>
+                  </h1>
+                  <p class="text-base font-bold text-color-primary">
+                    <%= service.category.name %>
+                  </p>
+                  <div class="flex items-center gap-1">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M13.5 13.5C14.4335 13.8183 15 14.2364 15 14.6944C15 15.6916 12.3137 16.5 9 16.5C5.68629 16.5 3 15.6916 3 14.6944C3 14.2364 3.56645 13.8183 4.5 13.5"
+                        stroke="#5E5E65" stroke-linecap="round" />
+                      <path
+                        d="M11.25 7.125C11.25 8.36768 10.2427 9.375 9 9.375C7.75732 9.375 6.75 8.36768 6.75 7.125C6.75 5.88236 7.75732 4.875 9 4.875C10.2427 4.875 11.25 5.88236 11.25 7.125Z"
+                        stroke="#5E5E65" />
+                      <path
+                        d="M9 1.5C12.0441 1.5 14.625 4.07102 14.625 7.19017C14.625 10.359 12.0021 12.5827 9.57938 14.0949C9.40283 14.1965 9.20318 14.25 9 14.25C8.79682 14.25 8.59717 14.1965 8.42062 14.0949C6.00244 12.568 3.375 10.3699 3.375 7.19017C3.375 4.07102 5.9559 1.5 9 1.5Z"
+                        stroke="#5E5E65" />
+                    </svg>
+                    <p class="text-sm font-medium text-color-gray truncate overflow-hidden text-ellipsis">
+                      <%= service.location.city %>, <%= service.location.state %>, <%= service.location.neighborhood %>,
+                            <%= service.location.street %>
+                    </p>
+                  </div>
+                </section>
+
+                <section class="flex flex-row items-center justify-between w-full">
+                  <div class="flex items-center gap-1.5">
+                    <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M12.9467 2.79869L14.7701 6.6042C15.0187 7.13394 15.6818 7.64206 16.2413 7.73936L19.5462 8.31235C21.6597 8.67993 22.157 10.28 20.634 11.8584L18.0647 14.5395C17.6295 14.9936 17.3913 15.8693 17.5259 16.4964L18.2616 19.8154C18.8417 22.4425 17.5052 23.4587 15.2778 22.0857L12.18 20.1722C11.6206 19.8262 10.6985 19.8262 10.1287 20.1722L7.03096 22.0857C4.81385 23.4587 3.46702 22.4316 4.0472 19.8154L4.78278 16.4964C4.91746 15.8693 4.67917 14.9936 4.24403 14.5395L1.67469 11.8584C0.162081 10.28 0.649017 8.67993 2.76251 8.31235L6.06745 7.73936C6.61655 7.64206 7.27961 7.13394 7.52825 6.6042L9.35165 2.79869C10.3462 0.73377 11.9624 0.73377 12.9467 2.79869Z"
+                        fill="#FFEA4D" stroke="#FFA920" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                    <p class="text-sm font-bold text-color-bg">
+                      <%= service.stars %>
+                    </p>
+                  </div>
+
+                  <button onclick="window.open('<%= service.contact %>')"
+                    class="hover:bg-color-bg cursor-pointer flex items-center justify-center gap-1.5 bg-color-primary rounded-lg px-3 h-9">
+                    <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M14.9338 11.4706C18.0944 7.46303 17.2406 3.48805 14.9701 2.09531C12.8247 0.779373 10.9523 1.30968 9.82752 2.1544L8.99984 2.77325M14.9338 11.4706C14.1752 12.4325 13.1854 13.3963 11.9284 14.3267C10.6914 15.2422 10.073 15.7 9 15.7C7.92704 15.7 7.30857 15.2422 6.07162 14.3267C-0.422624 9.51991 0.214455 3.82233 3.02995 2.09531C5.17527 0.779373 7.04769 1.30968 8.17248 2.1544L8.99984 2.77325M14.9338 11.4706L10.5137 6.45582C10.3327 6.25055 10.0298 6.20636 9.79776 6.35138L8.04888 7.44447C7.43344 7.82911 6.63467 7.74255 6.11592 7.23495C5.43069 6.56448 5.49983 5.44214 6.26216 4.86084L8.99984 2.77325"
+                        stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+
+                    <p class="text-sm font-semibold text-white">
+                      Contatar
+                    </p>
+                  </button>
+                </section>
+              </div>
+              <% }); %>
+          </ul>
+        </div>
+      </div>
+  </div>
+
+  </body>
+
+  </html>
