--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,6 +1,6 @@
-<aside class="h-svh w-72 bg-color-gray-light p-8 gap-2 flex flex-col">
+<aside class="h-svh w-80 bg-color-gray-light px-10 py-8 gap-2 flex flex-col">
   <a
-    href="/services"
+    href="/"
     class="flex items-center rounded-lg px-4 h-12 hover:bg-color-primary bg-color-bg gap-2"
   >
     <svg
@@ -22,7 +22,7 @@
   </a>
 
   <a
-    href="/services/favorites"
+    href="/favorites"
     class="flex items-center rounded-lg px-4 h-12 hover:bg-color-primary bg-color-bg gap-2"
   >
     <svg
