--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,70 +9,12 @@
 body {
   font: 16px "Inter", sans-serif;
 
-  --color-primary: #759D6E;
+  --color-primary: #759d6e;
   --color-primary-light: #acce91;
-  --color-primary-light-2: #DDFAC5;
   --color-gray-light: #efeae4;
   --color-gray-light-2: #e0dbd6;
   --color-gray: #5e5e65;
   --color-bg: #27272a;
-}
 
-/* BACKGROUNDS */
-
-.bg-color-primary {
-  background-color: var(--color-primary);
-}
-.bg-color-bg {
-  background-color: var(--color-bg);
-}
-.bg-color-primary-light {
-  background-color: var(--color-primary-light);
-}
-.bg-color-gray-light {
   background-color: var(--color-gray-light);
-}
-.bg-color-gray-light-2 {
-  background-color: var(--color-gray-light-2);
-}
-.bg-color-gray {
-  background: var(--color-gray);
-}
-
-/* TEXTS */
-.text-color-gray {
-  color: var(--color-gray);
-}
-.text-color-primary {
-  color: var(--color-primary);
-}
-.text-color-bg {
-  color: var(--color-bg);
-}
-.text-color-primary-light {
-  color: var(--color-primary-light);
-}
-.text-color-gray-light {
-  color: var(--color-gray-light);
-}
-.text-color-gray-light-2 {
-  color: var(--color-gray-light-2);
-}
-
-/* BORDER */
-
-.border-primary {
-  border: 1px solid var(--color-primary);
-}
-.border-bg {
-  border: 1px solid var(--color-bg);
-}
-.border-gray {
-  border: 1px solid var(--color-gray);
-}
-.border-gray-light {
-  border: 1px solid var(--color-gray-light);
-}
-.border-gray-light-2 {
-  border: 1px solid var(--color-gray-light-2);
 }
