--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <!-- HEADER -->
 <%- include("./partials/header.ejs") -%>
-  <div class="w-full h-screen flex flex-row">
+  <div class="w-full flex flex-col md:flex-row flex-wrap">
     <!-- SIDEBAR -->
     <%- include("./partials/sidebar.ejs") -%>
-      <div class="flex flex-col px-10 py-8 gap-6">
+      <div class="flex flex-col flex-wrap px-10 py-8 gap-6">
         <!-- CATEGORIES -->
         <ul class="flex flex-row items-center gap-12 overflow-x-auto">
           <% categories.forEach(function(category) {%>
-            <a href="/<%=category.name.toLowerCase()%>"
+            <a href="/category/<%=category.name.toLowerCase()%>"
               class="flex flex-col items-center gap-1 w-fit h-fit justify-center cursor-pointer">
               <div
                 class="flex items-center justify-center w-16 h-16 rounded-full border border-color-gray-light-2 bg-white">
@@ -88,13 +88,14 @@
             <% }); %>
         </ul>
         <!-- SERVICES -->
-        <div class="flex flex-col gap-5">
+        <div class="flex flex-wrap flex-col gap-5">
           <% if (services.length> 0) { %>
             <h1 class="font-bold text-3xl text-color-bg">
-              <%= isServicesFavorites===true ? 'Serviços favoritos' : 'Serviços na sua região' %>
+              <%= currentPath.includes("/search") ? 'Resultados da pesquisa' : isServicesFavorites===true
+                ? 'Serviços favoritos' : 'Serviços na sua região' %>
             </h1>
             <% } %>
-              <ul class="flex align-center flex-wrap gap-4">
+              <div class="flex align-center flex-col md:flex-row flex-wrap gap-4">
                 <% services.forEach(function(service) {%>
                   <div
                     class="border border-color-gray-light-2 bg-white p-5 rounded-lg w-72 flex flex-col gap-6 justify-center">
@@ -153,68 +154,74 @@
                     </section>
                   </div>
                   <% }); %>
-              </ul>
-              <h1 class="font-bold text-3xl text-color-bg">Serviços populares</h1>
-              <ul class="flex align-center flex-wrap gap-4">
-                <% popularServices.forEach(function(service) {%>
-                  <div
-                    class="border border-color-gray-light-2 bg-white p-5 rounded-lg w-72 flex flex-col gap-6 justify-center">
-                    <section class="flex flex-col gap-0">
-                      <h1 class="text-2xl font-bold text-color-text">
-                        <%= service.name %>
-                      </h1>
-                      <p class="text-base font-bold text-color-primary">
-                        <%= service.category.name %>
-                      </p>
-                      <div class="flex items-center gap-1">
-                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path
-                            d="M13.5 13.5C14.4335 13.8183 15 14.2364 15 14.6944C15 15.6916 12.3137 16.5 9 16.5C5.68629 16.5 3 15.6916 3 14.6944C3 14.2364 3.56645 13.8183 4.5 13.5"
-                            stroke="#5E5E65" stroke-linecap="round" />
-                          <path
-                            d="M11.25 7.125C11.25 8.36768 10.2427 9.375 9 9.375C7.75732 9.375 6.75 8.36768 6.75 7.125C6.75 5.88236 7.75732 4.875 9 4.875C10.2427 4.875 11.25 5.88236 11.25 7.125Z"
-                            stroke="#5E5E65" />
-                          <path
-                            d="M9 1.5C12.0441 1.5 14.625 4.07102 14.625 7.19017C14.625 10.359 12.0021 12.5827 9.57938 14.0949C9.40283 14.1965 9.20318 14.25 9 14.25C8.79682 14.25 8.59717 14.1965 8.42062 14.0949C6.00244 12.568 3.375 10.3699 3.375 7.19017C3.375 4.07102 5.9559 1.5 9 1.5Z"
-                            stroke="#5E5E65" />
-                        </svg>
-                        <p class="text-sm font-medium text-color-gray truncate overflow-hidden text-ellipsis">
-                          <%= service.location.city %>, <%= service.location.state %>, <%= service.location.neighborhood
-                                %>,
-                                <%= service.location.street %>
-                        </p>
+                </div>
+              <% if (popularServices.length> 0) { %>
+                <h1 class="font-bold text-3xl text-color-bg">Serviços populares</h1>
+                <% } %>
+
+                  <div class="flex align-center flex-col md:flex-row flex-wrap gap-4">
+                    <% popularServices.forEach(function(service) {%>
+                      <div
+                        class="border border-color-gray-light-2 bg-white p-5 rounded-lg w-72 flex flex-col gap-6 justify-center">
+                        <section class="flex flex-col gap-0">
+                          <h1 class="text-2xl font-bold text-color-text">
+                            <%= service.name %>
+                          </h1>
+                          <p class="text-base font-bold text-color-primary">
+                            <%= service.category.name %>
+                          </p>
+                          <div class="flex items-center gap-1">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <path
+                                d="M13.5 13.5C14.4335 13.8183 15 14.2364 15 14.6944C15 15.6916 12.3137 16.5 9 16.5C5.68629 16.5 3 15.6916 3 14.6944C3 14.2364 3.56645 13.8183 4.5 13.5"
+                                stroke="#5E5E65" stroke-linecap="round" />
+                              <path
+                                d="M11.25 7.125C11.25 8.36768 10.2427 9.375 9 9.375C7.75732 9.375 6.75 8.36768 6.75 7.125C6.75 5.88236 7.75732 4.875 9 4.875C10.2427 4.875 11.25 5.88236 11.25 7.125Z"
+                                stroke="#5E5E65" />
+                              <path
+                                d="M9 1.5C12.0441 1.5 14.625 4.07102 14.625 7.19017C14.625 10.359 12.0021 12.5827 9.57938 14.0949C9.40283 14.1965 9.20318 14.25 9 14.25C8.79682 14.25 8.59717 14.1965 8.42062 14.0949C6.00244 12.568 3.375 10.3699 3.375 7.19017C3.375 4.07102 5.9559 1.5 9 1.5Z"
+                                stroke="#5E5E65" />
+                            </svg>
+                            <p class="text-sm font-medium text-color-gray truncate overflow-hidden text-ellipsis">
+                              <%= service.location.city %>, <%= service.location.state %>, <%=
+                                    service.location.neighborhood %>,
+                                    <%= service.location.street %>
+                            </p>
+                          </div>
+                        </section>
+
+                        <section class="flex flex-row items-center justify-between w-full">
+                          <div class="flex items-center gap-1.5">
+                            <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <path
+                                d="M12.9467 2.79869L14.7701 6.6042C15.0187 7.13394 15.6818 7.64206 16.2413 7.73936L19.5462 8.31235C21.6597 8.67993 22.157 10.28 20.634 11.8584L18.0647 14.5395C17.6295 14.9936 17.3913 15.8693 17.5259 16.4964L18.2616 19.8154C18.8417 22.4425 17.5052 23.4587 15.2778 22.0857L12.18 20.1722C11.6206 19.8262 10.6985 19.8262 10.1287 20.1722L7.03096 22.0857C4.81385 23.4587 3.46702 22.4316 4.0472 19.8154L4.78278 16.4964C4.91746 15.8693 4.67917 14.9936 4.24403 14.5395L1.67469 11.8584C0.162081 10.28 0.649017 8.67993 2.76251 8.31235L6.06745 7.73936C6.61655 7.64206 7.27961 7.13394 7.52825 6.6042L9.35165 2.79869C10.3462 0.73377 11.9624 0.73377 12.9467 2.79869Z"
+                                fill="#FFEA4D" stroke="#FFA920" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            </svg>
+                            <p class="text-sm font-bold text-color-bg">
+                              <%= service.stars %>
+                            </p>
+                          </div>
+
+                          <button onclick="window.open('<%= service.contact %>')"
+                            class="hover:bg-color-bg cursor-pointer flex items-center justify-center gap-1.5 bg-color-primary rounded-lg px-3 h-9">
+                            <svg width="18" height="17" viewBox="0 0 18 17" fill="none"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <path
+                                d="M14.9338 11.4706C18.0944 7.46303 17.2406 3.48805 14.9701 2.09531C12.8247 0.779373 10.9523 1.30968 9.82752 2.1544L8.99984 2.77325M14.9338 11.4706C14.1752 12.4325 13.1854 13.3963 11.9284 14.3267C10.6914 15.2422 10.073 15.7 9 15.7C7.92704 15.7 7.30857 15.2422 6.07162 14.3267C-0.422624 9.51991 0.214455 3.82233 3.02995 2.09531C5.17527 0.779373 7.04769 1.30968 8.17248 2.1544L8.99984 2.77325M14.9338 11.4706L10.5137 6.45582C10.3327 6.25055 10.0298 6.20636 9.79776 6.35138L8.04888 7.44447C7.43344 7.82911 6.63467 7.74255 6.11592 7.23495C5.43069 6.56448 5.49983 5.44214 6.26216 4.86084L8.99984 2.77325"
+                                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+
+                            <p class="text-sm font-semibold text-white">
+                              Contatar
+                            </p>
+                          </button>
+                        </section>
                       </div>
-                    </section>
-
-                    <section class="flex flex-row items-center justify-between w-full">
-                      <div class="flex items-center gap-1.5">
-                        <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path
-                            d="M12.9467 2.79869L14.7701 6.6042C15.0187 7.13394 15.6818 7.64206 16.2413 7.73936L19.5462 8.31235C21.6597 8.67993 22.157 10.28 20.634 11.8584L18.0647 14.5395C17.6295 14.9936 17.3913 15.8693 17.5259 16.4964L18.2616 19.8154C18.8417 22.4425 17.5052 23.4587 15.2778 22.0857L12.18 20.1722C11.6206 19.8262 10.6985 19.8262 10.1287 20.1722L7.03096 22.0857C4.81385 23.4587 3.46702 22.4316 4.0472 19.8154L4.78278 16.4964C4.91746 15.8693 4.67917 14.9936 4.24403 14.5395L1.67469 11.8584C0.162081 10.28 0.649017 8.67993 2.76251 8.31235L6.06745 7.73936C6.61655 7.64206 7.27961 7.13394 7.52825 6.6042L9.35165 2.79869C10.3462 0.73377 11.9624 0.73377 12.9467 2.79869Z"
-                            fill="#FFEA4D" stroke="#FFA920" stroke-width="1.5" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                        </svg>
-                        <p class="text-sm font-bold text-color-bg">
-                          <%= service.stars %>
-                        </p>
-                      </div>
-
-                      <button onclick="window.open('<%= service.contact %>')"
-                        class="hover:bg-color-bg cursor-pointer flex items-center justify-center gap-1.5 bg-color-primary rounded-lg px-3 h-9">
-                        <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path
-                            d="M14.9338 11.4706C18.0944 7.46303 17.2406 3.48805 14.9701 2.09531C12.8247 0.779373 10.9523 1.30968 9.82752 2.1544L8.99984 2.77325M14.9338 11.4706C14.1752 12.4325 13.1854 13.3963 11.9284 14.3267C10.6914 15.2422 10.073 15.7 9 15.7C7.92704 15.7 7.30857 15.2422 6.07162 14.3267C-0.422624 9.51991 0.214455 3.82233 3.02995 2.09531C5.17527 0.779373 7.04769 1.30968 8.17248 2.1544L8.99984 2.77325M14.9338 11.4706L10.5137 6.45582C10.3327 6.25055 10.0298 6.20636 9.79776 6.35138L8.04888 7.44447C7.43344 7.82911 6.63467 7.74255 6.11592 7.23495C5.43069 6.56448 5.49983 5.44214 6.26216 4.86084L8.99984 2.77325"
-                            stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-
-                        <p class="text-sm font-semibold text-white">
-                          Contatar
-                        </p>
-                      </button>
-                    </section>
-                  </div>
-                  <% }); %>
-              </ul>
+                      <% }); %>
+                    </div>
         </div>
       </div>
   </div>
