--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!-- HEADER -->
 <%- include("./partials/header.ejs") -%>
-  <div class="w-full flex flex-col md:flex-row flex-wrap">
+  <div class="w-full flex flex-col md:flex-row flex-wrap pt-20">
     <!-- SIDEBAR -->
     <%- include("./partials/sidebar.ejs") -%>
       <div class="flex flex-col flex-wrap px-10 py-8 gap-6">
         <!-- CATEGORIES -->
-        <ul class="flex flex-row items-center gap-12 overflow-x-auto">
+        <ul class="flex flex-row items-center flex-wrap gap-12 overflow-x-auto">
           <% categories.forEach(function(category) {%>
             <a href="/category/<%=category.name.toLowerCase()%>"
               class="flex flex-col items-center gap-1 w-fit h-fit justify-center cursor-pointer">
