--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,15 +32,15 @@
 </head>
 
 <body>
-  <header class="w-full bg-color-bg flex justify-between p-10 h-20">
+  <header class="w-full bg-color-bg flex justify-between p-10 h-20 fixed">
     <div class="flex items-center gap-4">
       <img src="/assets/logo.svg" alt="Logo" class="h-10 w-10" />
 
-      <h1 class="text-2xl font-semibold text-white">Provider</h1>
+      <h1 class="hidden md:block text-2xl font-semibold text-white">Provider</h1>
     </div>
 
     <div class="flex items-center gap-4">
-      <div class="flex items-center text-sm font-normal text-white gap-1 cursor-pointer">
+      <div  id="location"  class="flex items-center text-sm font-normal text-white gap-1 cursor-pointer">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
           <path
             d="M7 18C5.17107 18.4117 4 19.0443 4 19.7537C4 20.9943 7.58172 22 12 22C16.4183 22 20 20.9943 20 19.7537C20 19.0443 18.8289 18.4117 17 18"
@@ -52,13 +52,14 @@
             d="M13.2574 17.4936C12.9201 17.8184 12.4693 18 12.0002 18C11.531 18 11.0802 17.8184 10.7429 17.4936C7.6543 14.5008 3.51519 11.1575 5.53371 6.30373C6.6251 3.67932 9.24494 2 12.0002 2C14.7554 2 17.3752 3.67933 18.4666 6.30373C20.4826 11.1514 16.3536 14.5111 13.2574 17.4936Z"
             stroke="#ffffff" stroke-width="1.5"></path>
         </svg>
-        <p>
+        <p class="w-24 md:w-52 truncate">
           <%= userLocationStr %>
         </p>
       </div>
 
       <label for="searchInput"
-        class="flex items-center gap-2 bg-white rounded-lg px-2 h-10 transition-colors duration-200">
+      id="inputContainer"
+        class="flex items-center gap-2 bg-white rounded-lg px-0 pl-2 pr-1 h-10 md:px-2">
         <svg class="cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
           color="#27272a" fill="none">
           <path d="M17 17L21 21" stroke="#27272a" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -68,7 +69,7 @@
             stroke="#27272a" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
         <input id="searchInput" type="text" placeholder="Buscar serviços"
-          class="outline-none text-sm text-color-text w-full"
+          class="w-0 p-0 md:w-full focus:w-full outline-none text-sm text-color-text"
           onsubmit="if(this.value != '') { window.location.href = '/search/' + this.value}"
           onkeydown="if (event.key === 'Enter') { if(this.value != '') { window.location.href = '/search/' + this.value; }}" />
     </div>
@@ -83,6 +84,15 @@
         document.getElementById("searchInput").value = valueSearch;
       }
     }
+
+    document.getElementById("searchInput").addEventListener("focus", function () {
+      document.getElementById("location").classList.add("hidden");
+      document.getElementById("location").classList.add("md:flex");
+    });
+    document.getElementById("searchInput").addEventListener("focusout", function () {
+      document.getElementById("location").classList.remove("hidden");
+      document.getElementById("location").classList.remove("md:flex");
+    });
   </script>
 </body>
 
