Finalizando a versão final com active sidebar button e category active também, e icone favorite

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-  <header class="w-full bg-color-bg flex justify-between p-10 h-20 fixed">
+  <header class="w-full z-50 bg-color-bg flex justify-between p-10 h-20 fixed">
     <div class="flex items-center gap-4">
       <img src="/assets/logo.svg" alt="Logo" class="h-10 w-10" />
 
