--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,6 @@
 <aside class="w-80 bg-color-gray-light px-10 py-8 gap-2 flex flex-col">
-    <a href="/" class="flex items-center rounded-lg px-4 h-12 hover:bg-color-primary bg-color-bg gap-2">
+    <a id="buttonSidebar" href="/"
+        class="border border-color-gray-light-2 flex items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg [&_*]:text-color-bg gap-2">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M19.4173 15.7133C23.368 10.7038 22.3007 5.73508 19.4626 3.99415C16.7809 2.34923 14.4404 3.01211 13.0344 4.06801L11.9998 4.84158M19.4173 15.7133C18.469 16.9156 17.2317 18.1204 15.6605 19.2834C14.1143 20.4278 13.3412 21 12 21C10.6588 21 9.88572 20.4278 8.33953 19.2834C0.221719 13.2749 1.01807 6.15293 4.53744 3.99415C7.21909 2.34923 9.55962 3.01211 10.9656 4.06801L11.9998 4.84158M19.4173 15.7133L13.8921 9.44479C13.6659 9.1882 13.2873 9.13296 12.9972 9.31424L10.8111 10.6806C10.0418 11.1614 9.04334 11.0532 8.3949 10.4187C7.53837 9.58062 7.62479 8.17769 8.5777 7.45106L11.9998 4.84158"
@@ -8,7 +9,8 @@
         <p class="text-white text-sm font-medium">Serviços</p>
     </a>
 
-    <a href="/favorites" class="flex items-center rounded-lg px-4 h-12 hover:bg-color-primary bg-color-bg gap-2">
+    <a id="buttonSidebar" href="/favorites"
+        class="border border-color-gray-light-2 flex items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg [&_*]:text-color-bg gap-2">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M10.4107 19.9677C7.58942 17.858 2 13.0348 2 8.69444C2 5.82563 4.10526 3.5 7 3.5C8.5 3.5 10 4 12 6C14 4 15.5 3.5 17 3.5C19.8947 3.5 22 5.82563 22 8.69444C22 13.0348 16.4106 17.858 13.5893 19.9677C12.6399 20.6776 11.3601 20.6776 10.4107 19.9677Z"
