--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,5 @@
 <aside class="w-80 bg-color-gray-light px-10 py-8 gap-2 flex flex-col">
-    <a id="buttonSidebar" href="/"
+    <a link="/" id="buttonSidebar" href="/<%= getSearchParams() %>"
         class="border border-color-gray-light-2 flex items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg [&_*]:text-color-bg gap-2">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -9,7 +9,7 @@
         <p class="text-white text-sm font-medium">Serviços</p>
     </a>
 
-    <a id="buttonSidebar" href="/favorites"
+    <a link="/favorites" id="buttonSidebar" href="/favorites<%= getSearchParams() %>"
         class="border border-color-gray-light-2 flex items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg [&_*]:text-color-bg gap-2">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -19,4 +19,101 @@
 
         <p class="text-white text-sm font-semibold">Favoritos</p>
     </a>
+
+    <% if (!user) { %>
+        <!-- User not logged in -->
+        <div class="mt-4 flex flex-col gap-2">
+            <a href="/login?&r=<%= user ? user.roleId : 0 %>"
+                class="border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-color-primary [&_*]:text-white">
+                <p class="text-white text-sm font-semibold">Login</p>
+            </a>
+
+            <a href="/signup"
+                class="border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg [&_*]:text-color-bg">
+                <p class="text-white text-sm font-semibold">Registrar</p>
+            </a>
+
+            <div class="mt-6 border-t border-color-gray-light-2 pt-4 border rounded-lg p-4 bg-white">
+                <p class="text-color-bg text-lg mb-3 font-medium">Quer ser um <span
+                        class="text-color-primary font-bold">provedor</span> de
+                    serviço?</p>
+                <a href="/signup?&r=1"
+                    class="border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-color-primary [&_*]:text-white">
+                    <p class="text-white text-sm font-semibold">Começar</p>
+                </a>
+            </div>
+        </div>
+        <% } else if (user.roleId==0) { %>
+            <!-- Regular client user -->
+            <div class="mt-4">
+                <div class="flex flex-row gap-2 border border-color-gray-light-2 rounded-lg p-3 bg-white">
+                    <svg class="mt-0.5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+                        color="#000000" fill="none">
+                        <path
+                            d="M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
+                            stroke="currentColor" stroke-width="1.5" />
+                        <path
+                            d="M14.75 9.5C14.75 11.0188 13.5188 12.25 12 12.25C10.4812 12.25 9.25 11.0188 9.25 9.5C9.25 7.98122 10.4812 6.75 12 6.75C13.5188 6.75 14.75 7.98122 14.75 9.5Z"
+                            stroke="currentColor" stroke-width="1.5" />
+                        <path
+                            d="M5.49994 19.0001L6.06034 18.0194C6.95055 16.4616 8.60727 15.5001 10.4016 15.5001H13.5983C15.3926 15.5001 17.0493 16.4616 17.9395 18.0194L18.4999 19.0001"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    <div class="flex flex-col">
+                        <p class="text-color-bg text-lg font-semibold">
+                            <%= user.userName %>
+                        </p>
+                        <p class="text-color-primary text-sm  font-medium">Cliente</p>
+                    </div>
+                </div>
+
+                <a href="/"
+                    class="mt-4 border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg">
+                    <p class="text-red-700 text-sm font-semibold">Sair</p>
+                </a>
+            </div>
+            <% } else if (user.roleId==1) { %>
+                <!-- Service provider user -->
+                <div class="mt-4">
+                    <div
+                        class="flex flex-row gap-2 border border-color-gray-light-2 rounded-lg p-3 bg-color-primary text-white">
+                        <svg class="mt-0.5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"
+                            height="24" color="#ffffff" fill="none">
+                            <path
+                                d="M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
+                                stroke="currentColor" stroke-width="1.5" />
+                            <path
+                                d="M14.75 9.5C14.75 11.0188 13.5188 12.25 12 12.25C10.4812 12.25 9.25 11.0188 9.25 9.5C9.25 7.98122 10.4812 6.75 12 6.75C13.5188 6.75 14.75 7.98122 14.75 9.5Z"
+                                stroke="currentColor" stroke-width="1.5" />
+                            <path
+                                d="M5.49994 19.0001L6.06034 18.0194C6.95055 16.4616 8.60727 15.5001 10.4016 15.5001H13.5983C15.3926 15.5001 17.0493 16.4616 17.9395 18.0194L18.4999 19.0001"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                        <div class="flex flex-col">
+                            <p class="text-white text-lg font-semibold">
+                                <%= user.userName %>
+                            </p>
+                            <p class="text-white text-sm font-medium">
+                                <%= user.service.name %>
+                            </p>
+                            <p class="text-white text-xs font-semibold">
+                                <%= user.service.category.name %>
+                            </p>
+                        </div>
+                    </div>
+
+                    <a href="/"
+                        class="mt-4 border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-white [&_*]:stroke-color-bg">
+                        <p class="text-red-700 text-sm font-semibold">Sair</p>
+                    </a>
+                </div>
+                <% } %>
 </aside>
+
+<script>
+    function getSearchParams() {
+        const urlParams = new URLSearchParams(window.location.search);
+        return urlParams.toString() ? '?' + urlParams.toString() : '';
+    }
+</script>
