--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,7 +40,8 @@
     </div>
 
     <div class="flex items-center gap-4">
-      <div  id="location"  class="flex items-center text-sm font-normal text-white gap-1 cursor-pointer">
+      <a href="/login?r=<%- user ? user.roleId : 0 -%>" id="location"
+        class="flex items-center text-sm font-normal text-white gap-1 cursor-pointer">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
           <path
             d="M7 18C5.17107 18.4117 4 19.0443 4 19.7537C4 20.9943 7.58172 22 12 22C16.4183 22 20 20.9943 20 19.7537C20 19.0443 18.8289 18.4117 17 18"
@@ -53,12 +54,11 @@
             stroke="#ffffff" stroke-width="1.5"></path>
         </svg>
         <p class="w-24 md:w-52 truncate">
-          <%= userLocationStr %>
+          <%= !user ? "Faça login para localizar" : userLocationStr %>
         </p>
-      </div>
+      </a>
 
-      <label for="searchInput"
-      id="inputContainer"
+      <label for="searchInput" id="inputContainer"
         class="flex items-center gap-2 bg-white rounded-lg px-0 pl-2 pr-1 h-10 md:px-2">
         <svg class="cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
           color="#27272a" fill="none">
@@ -70,13 +70,18 @@
         </svg>
         <input id="searchInput" type="text" placeholder="Buscar serviços"
           class="w-0 p-0 md:w-full focus:w-full outline-none text-sm text-color-text"
-          onsubmit="if(this.value != '') { window.location.href = '/search/' + this.value}"
-          onkeydown="if (event.key === 'Enter') { if(this.value != '') { window.location.href = '/search/' + this.value; }}" />
+          onsubmit="if(this.value != '') { window.location.href = '/search/' + this.value + getSearchParams()}"
+          onkeydown="if (event.key === 'Enter') { if(this.value != '') { window.location.href = '/search/' + this.value + getSearchParams(); }}" />
     </div>
     </div>
   </header>
 
   <script>
+    function getSearchParams() {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.toString() ? '?' + urlParams.toString() : '';
+    }
+
     if (window.location.pathname.includes("/search/")) {
 
       let valueSearch = decodeURIComponent(window.location.pathname.replace("/search/", ""));
