--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -23,7 +23,7 @@
     <% if (!user) { %>
         <!-- User not logged in -->
         <div class="mt-4 flex flex-col gap-2">
-            <a href="/login?&r=<%= user ? user.roleId : 0 %>"
+            <a href="/login?r=<%= user ? user.roleId : 0 %>"
                 class="border border-color-gray-light-2 flex justify-center items-center rounded-lg px-4 h-12 hover:bg-color-light-gray bg-color-primary [&_*]:text-white">
                 <p class="text-white text-sm font-semibold">Login</p>
             </a>
@@ -61,7 +61,7 @@
                     </svg>
                     <div class="flex flex-col">
                         <p class="text-color-bg text-lg font-semibold">
-                            <%= user.userName %>
+                            <%= user.username %>
                         </p>
                         <p class="text-color-primary text-sm  font-medium">Cliente</p>
                     </div>
@@ -92,7 +92,7 @@
                         </svg>
                         <div class="flex flex-col">
                             <p class="text-white text-lg font-semibold">
-                                <%= user.userName %>
+                                <%= user.username %>
                             </p>
                             <p class="text-white text-sm font-medium">
                                 <%= user.service.name %>
