--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,7 +40,7 @@
 
             <h1 class="text-2xl font-semibold text-color-bg">Provider</h1>
         </div>
-        <form onsubmit="(function(e){ e.preventDefault(); return false; })(event)"
+        <form action="/register?r=<%- roleId %>" method="post"
             class="flex flex-col gap-4 w-full md:w-fit h-fit p-8 bg-white rounded-lg border border-color-gray-light-2">
 
             <div class="flex items-center gap-2 justify-center">
@@ -71,13 +71,13 @@
                         usuário</label>
                     <input
                         class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                        id="input-username" type="username" placeholder="Digite o nome de usuário">
+                        id="input-username" type="username" name="username" placeholder="Digite o nome de usuário">
                 </div>
                 <div class="flex flex-col gap-0.5">
                     <label class="text-sm font-medium text-color-bg" for="input-password">Senha</label>
                     <input
                         class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                        id="input-password" autocomplete="current-password" type="password"
+                        id="input-password" name="password" autocomplete="current-password" type="password"
                         placeholder="Digite a sua senha">
                 </div>
                 <div class="flex flex-col gap-0.5">
@@ -85,16 +85,17 @@
                     <div class="flex items-center gap-2">
                         <input
                             class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full md:w-24  text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                            id="input-location-city" type="text" placeholder="Cidade">
+                            id="input-location-city" name="locationCity" type="text" placeholder="Cidade">
                         <input
                             class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full md:w-24 text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                            id="input-location-state" type="text" placeholder="Estado">
+                            id="input-location-state" name="locationState" type="text" placeholder="Estado">
                         <input
                             class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full md:w-24 text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                            id="input-location-neighborhood" type="text" placeholder="Bairro">
+                            id="input-location-neighborhood" name="locationNeighborhood" type="text"
+                            placeholder="Bairro">
                         <input
                             class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full md:w-24 text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                            id="input-location-street" type="text" placeholder="Rua">
+                            id="input-location-street" name="locationStreet" type="text" placeholder="Rua">
                     </div>
                 </div>
                 <% if (roleId==1) { %>
@@ -102,14 +103,15 @@
                         <label class="text-sm font-medium text-color-bg" for="input-location">Nome do serviço</label>
                         <input
                             class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                            id="input-service-name" type="text" placeholder="Digite o nome do serviço">
+                            id="input-service-name" nmae="serviceName" type="text"
+                            placeholder="Digite o nome do serviço">
                     </div>
                     <div class="flex flex-col gap-0.5">
                         <label class="text-sm font-medium text-color-bg" for="input-service-category">Categoria do
                             serviço</label>
                         <select
                             class="placeholder-color-gray px-4 outline-2 outline-color-primary bg-white w-full text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                            id="input-service-category">
+                            id="input-service-category" name="serviceCategory">
                             <option value="" disabled selected>Selecione uma categoria</option>
                             <% categories.forEach(category=> { %>
                                 <option value="<%= category.name %>">
@@ -123,15 +125,20 @@
                             contato</label>
                         <input
                             class="placeholder-color-gray p-4 outline-2 outline-color-primary bg-white w-full text-color-bg h-10 rounded-lg text-sm font-medium border border-color-gray-light-2"
-                            id="input-service-link" type="text" placeholder="Digite o link de contato para o serviço">
+                            id="input-service-link" name="serviceLink" type="text"
+                            placeholder="Digite o link de contato para o serviço">
                     </div>
                     <% } %>
             </div>
 
+            <% if (error != null) { %>
+                <%- include("./partials/error.ejs", { error: error }) -%>
+            <% } %>
+
             <p class="font-medium text-sm text-color-bg">Já tem uma conta? <a class="font-bold text-color-primary"
                     href="/login?r=<%-roleId-%>">Login</a></p>
 
-            <button onclick="signup()"
+            <button
                 class="hover:bg-color-bg outline-none bg-color-primary w-full text-white h-10 rounded-lg text-sm font-medium"
                 type="submit">Começar</button>
     </div>
@@ -153,78 +160,6 @@
 
         if (parseQueryString()["r"] != 0 && parseQueryString()["r"] != 1) {
             window.location.href = decodeURIComponent('/signup?r=0')
-        }
-
-        const signupProvider = () => {
-            const username = document.querySelector('#input-username').value
-            const locationCity = document.querySelector('#input-location-city').value
-            const locationState = document.querySelector('#input-location-state').value
-            const locationNeighborhood = document.querySelector('#input-location-neighborhood').value
-            const locationStreet = document.querySelector('#input-location-street').value
-            const serviceName = document.querySelector('#input-service-name').value
-            const serviceCategory = document.querySelector('#input-service-category').value
-            const serviceLink = document.querySelector('#input-service-link').value
-
-            let services = JSON.parse(decodeURIComponent('<%- encodeURIComponent(JSON.stringify(services || [])) %>'));
-            if (!services) {
-                services = [];
-            }
-            let users = JSON.parse(decodeURIComponent('<%- encodeURIComponent(JSON.stringify(users || [])) %>'));
-            if (!users) {
-                users = [];
-            }
-
-            if (!username || !locationCity || !locationState || !locationNeighborhood || !locationStreet ||
-                !serviceName || !serviceCategory || !serviceLink) {
-                alert('Por favor, preencha todos os campos.')
-                return
-            }
-
-            if (users.some(user => user.username === username && user.roleId === parseInt(parseQueryString()["r"]))) {
-                alert('Este usuário já existe. Por favor, escolha outro nome de usuário.')
-                return
-            }
-
-            const serviceId = Math.floor(Math.random() * 1000000) + 1;
-
-            const newService = {
-                id: serviceId,
-                name: serviceName,
-                category: serviceCategory,
-                link: serviceLink,
-                location: {
-                    city: locationCity,
-                    state: locationState,
-                    neighborhood: locationNeighborhood,
-                    street: locationStreet
-                },
-                contact: serviceLink,
-                stars: 0,
-                favorite: false
-            }
-
-            services.push(newService);
-
-            window.location.href = decodeURIComponent(`/?u=${username}&r=${parseQueryString()["r"]}&lc=${locationCity}&ls=${locationState}&ln=${locationNeighborhood}&lst=${locationStreet}&si=${serviceId}&sn=${serviceName}&sc=${serviceCategory}&sl=${serviceLink}`);
-        }
-
-        const signup = () => {
-            if (parseQueryString()["r"] == 1) {
-                signupProvider()
-            } else if (parseQueryString()["r"] == 0) {
-                const username = document.querySelector('#input-username').value
-                const locationCity = document.querySelector('#input-location-city').value
-                const locationState = document.querySelector('#input-location-state').value
-                const locationNeighborhood = document.querySelector('#input-location-neighborhood').value
-                const locationStreet = document.querySelector('#input-location-street').value
-
-                if (!username || !locationCity || !locationState || !locationNeighborhood || !locationStreet) {
-                    alert('Por favor, preencha todos os campos.')
-                    return
-                }
-
-                window.location.href = decodeURIComponent(`/?u=${username}&r=${parseQueryString()["r"]}&lc=${locationCity}&ls=${locationState}&ln=${locationNeighborhood}&lst=${locationStreet}`);
-            }
         }
     </script>
 </body>
